--- a/animation.css
+++ b/animation.css
@@ -1,3 +1,40 @@
-#chain {
-    font-size: 50px;
+html, body {
+    height: 100%;
 }
+
+body {
+    margin: 0;
+}
+
+.chain {
+    width: 100%;
+    height: 100%;
+    background-color: #1abc9c;
+}
+.battery {
+    width: 100%;
+    height: 100%;
+    background-color: #2c3e50;
+}
+
+.hourglass {
+    width: 100%;
+    height: 100%;
+    background-color: #9b59b6;
+}
+
+#chain, #battery, #hourglass {
+    font-size: 100px;
+    height: 100%;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
